# learn-applied-generative-ai-fundamentals

./: LICENSE  README.md
-01_aisuite/: readme.md
-01_helloworld_ai_api/: Prompting.ipynb  gpt_4o_mini_demo.ipynb  readme.md
-01_prologue/: readme.md
-01_rise_of_agentic_ai/: readme.md
00_agi/: readme.md
00_gpts/: readme.md
00_helloworld_ai_api/: readme.md
00_what_is_generative_ai/: readme.md
01_agentic_future/: readme.md
01_ai_pcs/: readme.md
01_ai_stacks/: readme.md
01_applied_generative_ai/: readme.md
01_custom_gpts/02_gpt_actions/00b_fastapi_todo_gpt/backend/: pyproject.toml
01_custom_gpts/02_gpt_actions/00b_fastapi_todo_gpt/backend/app/database/: database.py
01_principles_of_prompting/: readme.md
02_cloud_and_edge/: readme.md
02_next_wave_humaniods/: readme.md
02b_tsmc/: readme.md
03_agi/: readme.md
03_custom_gpts/: readme.md
03_nvidia_cloud_gpus/: readme.md
03_what_is_a_gpu/: readme.md
03_what_is_generative_ai/: readme.md
04_ai_agent_architecture/: readme.md
04_ai_agents_intro/: readme.md
04_ai_stacks/: readme.md
05_agentic_future/: readme.md
05_crew_ai/: readme.md
05_crew_ai/05_adding_crews_to_flows/helloworld/: pyproject.toml
06_next_wave_humaniods/: readme.md
06_prompt_engineering/: readme.md
07_ai_pcs/: readme.md
08_agent_payment_system/: readme.md
08_nvidia_nim/: readme.md
09_memory/: readme.md
10_economics_of_ai_apis/: readme.md
10_prompt_engineering/: readme.md
10_sandboxes/: readme.md
10_tool_libraries/: readme.md
10_what_is_generative_ai/: readme.md
11_microsoft_agentic/: readme.md
(+502 files in other folders)
