[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Wania-Kazmi <waniakz019@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlmodel = "^0.0.21"
psycopg = {extras = ["binary"], version = "^3.2.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
